board scheduler: combining schedules

--- a/board_scheduler/scheduler_pandas.ipynb
+++ b/board_scheduler/scheduler_pandas.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the data"
+    "# Load data"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "source": [
     "# Senior boards\n",
     "composition = pd.read_csv(folder_name + 'senior_boards.csv') # Board composition\n",
-    "composition.head(5)\n",
+    "composition['kind'] = 'sproj'\n",
     "\n",
     "faculty_names = (composition['advisor']\n",
     "                 .append(composition['member2'])\n",
@@ -99,7 +99,26 @@
     "    # Remove comma and put first name first, and last name - last\n",
     "    composition.loc[i,'student'] = ' '.join(composition.loc[i,'student'].split(', ')[::-1])\n",
     "    \n",
-    "#composition"
+    "# composition.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moderation boards\n",
+    "moderations = pd.read_csv(folder_name + 'moderation_boards.csv') # Board composition\n",
+    "moderations = moderations.drop(['advisors', 'paper'], axis=1)\n",
+    "moderations['kind'] = 'moderation'\n",
+    "\n",
+    "composition = pd.concat((composition,moderations), axis=0)\n",
+    "(composition.advisor\n",
+    " .append(composition.member2)\n",
+    " .append(composition.member3)\n",
+    " .value_counts()\n",
+    ")"
    ]
   },
   {
@@ -192,7 +211,12 @@
     "                schedule = schedule.append({'name':current_student, 'day':day, \n",
     "                                            'program':program, 'course_n':course_n,\n",
     "                                           'start':left_time, 'finish':right_time}, \n",
-    "                                           ignore_index=True)"
+    "                                           ignore_index=True)\n",
+    "                \n",
+    "# Go from literals (like \"12 pm\") to datetime. \n",
+    "# The date doesn't make sense here (it defaults to current date), only time.\n",
+    "schedule.start = pd.to_datetime(schedule.start)\n",
+    "schedule.finish = pd.to_datetime(schedule.finish)"
    ]
   },
   {
@@ -204,6 +228,42 @@
     "# Missed students\n",
     "student_list = [s for s in composition.student.values if s not in schedule.name.values]\n",
     "print('Missing students:', student_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule.name.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add students to availability table\n",
+    "\n",
+    "day_dict = {'M':0, 'T':1, 'W':2, 'Th':3, 'F':4, 'S':5} # That's how pandas.weekday works\n",
+    "for name in composition.student:\n",
+    "    df_avail[name] = True\n",
+    "    if name not in schedule.name.unique():\n",
+    "        print(f\"No schedule for student {name}; assuming full availability.\")\n",
+    "    else:\n",
+    "        classes = schedule.query(\"name==@name\").reset_index()\n",
+    "        for i in range(classes.shape[0]):\n",
+    "            if classes.loc[i, 'program'] != 'BIO':\n",
+    "                daynum = day_dict[classes.loc[i, 'day']]\n",
+    "                df_avail.loc[(df_avail.slot.dt.weekday==daynum) &\n",
+    "                             (df_avail.slot.dt.hour >= classes.loc[i, 'start'].hour) &\n",
+    "                             (df_avail.slot.dt.hour < classes.loc[i, 'finish'].ceil('H').hour),\n",
+    "                             name\n",
+    "                            ] = False\n",
+    "\n",
+    "plot_avail(df_avail)"
    ]
   },
   {
