board scheduler: solid working version

--- a/board_scheduler/biosem_forms.ipynb
+++ b/board_scheduler/biosem_forms.ipynb
@@ -36,8 +36,8 @@
    "outputs": [],
    "source": [
     "# Read student list\n",
-    "people = pd.read_csv(folder_name + 'people.txt', header=0, sep='\\t')\n",
-    "people['name'] = people['first'] + ' ' + people['last']\n",
+    "people = pd.read_csv(folder_name + 'people.csv')\n",
+    "people['name'] = people['first_name'] + ' ' + people['last_name']\n",
     "people = people.drop_duplicates()\n",
     "people = people.reset_index()\n",
     "people['count'] = 0\n",
@@ -100,6 +100,17 @@
    "source": [
     "answer = people.query('count>0')\n",
     "# answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check out one student\n",
+    "token = 'ste'\n",
+    "people.query(\"name.str.lower().str.contains(@token)\", engine='python')"
    ]
   },
   {
