--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "folder_name = '../../data/attendance/'\n",
-    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
+    "target_meeting = 'Biosem' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
     "chat_mask = 'Neuroscience'"
    ]
   },
@@ -257,7 +257,7 @@
     "print('Unrecognized emails (uncomment to see the list):', len(df_lost.id))\n",
     "\n",
     "# Output nice human-readable form:\n",
-    "# df_lost"
+    "df_lost"
    ]
   },
   {
@@ -267,8 +267,17 @@
    "outputs": [],
    "source": [
     "# Real name searher:\n",
-    "token='Stef'\n",
-    "df_fixed.query('name.notna()', engine='python').query('name.str.match(@token)', engine='python')"
+    "token='stepha'\n",
+    "df_fixed.query('name.notna()', engine='python').query('name.str.lower().str.contains(@token)', engine='python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fixed.fillna(' ').query(\"email.str.contains('6406')\", engine='python')"
    ]
   },
   {
@@ -299,6 +308,15 @@
     "      )\n",
     "\n",
     "# dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs"
    ]
   },
   {
