board scheduler: nice output

--- a/board_scheduler/scheduler_pandas.ipynb
+++ b/board_scheduler/scheduler_pandas.ipynb
@@ -68,7 +68,7 @@
     "# Prepare time axis for the availability matrix\n",
     "temp = []\n",
     "for day in days:\n",
-    "    for hour in range(8,19):\n",
+    "    for hour in range(8,18):\n",
     "        stamp = day + ' ' + str(hour) + ':00'\n",
     "        temp.append(pd.to_datetime(stamp))\n",
     "df_avail = pd.DataFrame({'slot':temp})\n",
@@ -192,6 +192,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Availability of one faculty\n",
+    "# print('\\n'.join([str(v) for v in df_avail.loc[df_avail['Gabriel'], 'slot']]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read and process student availability\n",
     "altnames = pd.read_csv(folder_name + 'altnames.csv')\n",
     "schedule = pd.DataFrame(columns=['name', 'day', 'start', 'finish'])\n",
@@ -204,7 +214,8 @@
     "            break\n",
     "        if len(line)<3: # Empty line\n",
     "            continue\n",
-    "        s = line.split(' ')\n",
+    "        s = line.replace('\\t',' ').split(' ') # Remove tabs\n",
+    "        s = ' '.join(s).split(' ') # Remove repated spaces and split again\n",
     "        if s[0]=='Student:':\n",
     "            lim = [i for i in range(len(s)) if s[i]=='--'][0] # Find where the name ends\n",
     "            name = ' '.join(s[1:lim])\n",
@@ -240,6 +251,16 @@
     "# The date doesn't make sense here (it defaults to current date), only time.\n",
     "schedule.start = pd.to_datetime(schedule.start)\n",
     "schedule.finish = pd.to_datetime(schedule.finish)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check one student's classes\n",
+    "# schedule.query(\"name.str.contains('arx')\", engine='python')"
    ]
   },
   {
@@ -408,9 +429,34 @@
     "df_result = (df_result\n",
     "             .sort_values('slot')\n",
     "             .merge(composition, how='left', left_on='name', right_on='student')\n",
-    "             .drop(['index'], axis=1)\n",
+    "             .drop(['index','name'], axis=1)\n",
     "            )\n",
     "df_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Printing it by faculty\n",
+    "\n",
+    "def print_row(ser):\n",
+    "    # Prints one row\n",
+    "    day_dict = {0:'Mon', 1:'Tue', 2:'Wed', 3:'Thr', 4:'Fri'}\n",
+    "    print(f\"{day_dict[ser.slot.weekday()]} \", end='')\n",
+    "    print(f\"{ser.slot.strftime('%b-%d')} {ser.slot.strftime('%I%p').lower()} \", end='')\n",
+    "    print(f\"{ser.student:22s} {ser.kind[:3]}  {ser.advisor:8} {ser.member2:8} {ser.member3:8}\")\n",
+    "    \n",
+    "def print_df(df):\n",
+    "    for i in range(df.shape[0]):\n",
+    "        print_row(df.iloc[i,:])\n",
+    "    \n",
+    "for name in df_fac.first_name:\n",
+    "    print(name)\n",
+    "    print_df(df_result.query(\"advisor==@name | member2==@name | member3==@name\"))\n",
+    "    print('')"
    ]
   },
   {
