board scheduler: more reports

--- a/board_scheduler/scheduler_pandas.ipynb
+++ b/board_scheduler/scheduler_pandas.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "# Availability of one faculty\n",
-    "# print('\\n'.join([str(v) for v in df_avail.loc[df_avail['Gabriel'], 'slot']]))"
+    "# print('\\n'.join([str(v) for v in df_avail.loc[df_avail['Mike'], 'slot']]))"
    ]
   },
   {
@@ -385,37 +385,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def book(df_boards, dfc, name, slot, value=0):\n",
+    "def book(df_boards, dfc, name, slot, value=False):\n",
     "    # A helper function, to make notation simpler    \n",
     "    name1 = dfc.loc[dfc.student==name,'advisor'].values[0]\n",
     "    name2 = dfc.loc[dfc.student==name,'member2'].values[0]\n",
     "    name3 = dfc.loc[dfc.student==name,'member3'].values[0]\n",
+    "    # Find all boards\n",
     "    ind = ((dfc.advisor==name1) | (dfc.advisor==name2) | (dfc.advisor==name3) | \n",
     "           (dfc.member2==name1) | (dfc.member2==name2) | (dfc.member2==name3) | \n",
-    "           (dfc.member3==name2) | (dfc.member3==name2) | (dfc.member3==name3))\n",
+    "           (dfc.member3==name1) | (dfc.member3==name2) | (dfc.member3==name3))\n",
     "    name_list = dfc.loc[ind, 'student']\n",
     "    for affected in name_list:\n",
     "        df_boards.loc[df_boards.slot==slot, affected] = value\n",
-    "    return df\n",
-    "\n",
-    "df = df_boards.copy() # Make a copy\n",
-    "df_result = pd.DataFrame({'slot':[], 'name':[]})\n",
-    "for i in range(1,df.shape[1]): # For every board, sorted by toughness\n",
-    "    name = df.columns[i]\n",
-    "    ind = np.where(df.iloc[:,i].values)[0]\n",
-    "    # print(ind)    \n",
-    "    if len(ind)==0:\n",
-    "        print(f\"Cannot book a board for {name}\")\n",
-    "    else:\n",
-    "        ind = ind[0] # Take first\n",
-    "    slot = df.slot[ind]    \n",
-    "    df_result = df_result.append({'slot':slot, 'name':name}, ignore_index=True)\n",
-    "    # print(f\"Booking {name} for {slot}\")\n",
-    "    df = book(df, composition, name, slot)\n",
-    "    if i<df.shape[1]-1: # Next exists\n",
-    "        df = pd.concat((df.iloc[:, :(i+1)], reorder(df.iloc[:, (i+1):])), axis=1)\n",
-    "\n",
-    "# df_result"
+    "    return df"
    ]
   },
   {
@@ -424,14 +406,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finalize dataset\n",
+    "df = df_boards.copy() # Start with making a copy of the original dataframe\n",
+    "df_result = pd.DataFrame({'slot':[], 'name':[]}) # The result will go here\n",
     "\n",
+    "# Read boards that were already scheduled, and add them to the list\n",
+    "df_already = pd.read_csv(folder_name + 'settled.txt', sep='\\t').drop('index', axis=1)\n",
+    "print(f\"Pre-scheduled: {df_already.shape[0]} boards\")\n",
+    "for i in range(df_already.shape[0]):\n",
+    "    name = df_already.loc[i, 'student']\n",
+    "    slot = pd.to_datetime(df_already.loc[i, 'slot'])\n",
+    "    df = book(df, composition, name, slot) # We need to go through this to update other boards availability\n",
+    "    df_result = df_result.append({'slot':slot, 'name':name}, ignore_index=True)\n",
+    "\n",
+    "plot_avail(df)\n",
+    "# Find boards that remain to be scheduled\n",
+    "df = df.loc[:, [name for name in df.columns if name not in df_already.student.values]]\n",
+    "print(f\"Remains to schedule: {df.shape[1]-1} boards\")\n",
+    "# Schedule them\n",
+    "for i in range(1,df.shape[1]): # For every board, sorted by toughness\n",
+    "    name = df.columns[i]\n",
+    "    ind = np.where(df.iloc[:,i].values)[0]\n",
+    "    if len(ind)==0:\n",
+    "        print(f\"Cannot book a board for {name}\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        ind = ind[0] # Take first\n",
+    "    slot = df.slot[ind]    \n",
+    "    df_result = df_result.append({'slot':slot, 'name':name}, ignore_index=True)\n",
+    "    # print(f\"Booking {name} for {slot}\")\n",
+    "    df = book(df, composition, name, slot)\n",
+    "    if i<df.shape[1]-1: # If not over, reoarder the rest\n",
+    "        df = pd.concat((df.iloc[:, :(i+1)], reorder(df.iloc[:, (i+1):])), axis=1)\n",
+    "\n",
+    "# Finalize:\n",
     "df_result = (df_result\n",
     "             .sort_values('slot')\n",
     "             .merge(composition, how='left', left_on='name', right_on='student')\n",
     "             .drop(['index','name'], axis=1)\n",
     "            )\n",
     "df_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "','.join(df_result.query(\"kind=='moderation'\").email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df_result\n",
+    " .assign(weekday=df_result.slot.dt.strftime('%a'))\n",
+    " .assign(date=df_result.slot.dt.strftime('%b-%d'))\n",
+    " .assign(time=df_result.slot.dt.strftime('%I%p').str.lower())\n",
+    " .loc[:,['student', 'weekday', 'date', 'time', 'advisor', 'member2', 'member3', 'kind']]\n",
+    " .sort_values('student')\n",
+    " .set_index('student')\n",
+    ")"
    ]
   },
   {
@@ -453,117 +491,31 @@
     "    for i in range(df.shape[0]):\n",
     "        print_row(df.iloc[i,:])\n",
     "    \n",
-    "for name in df_fac.first_name:\n",
+    "for name in ['Brooke', 'Bruce', 'Cathy', 'Eli', 'Gabriel', 'Heather', 'Mike', 'Arseny', 'Kerri-Ann']:\n",
     "    print(name)\n",
     "    print_df(df_result.query(\"advisor==@name | member2==@name | member3==@name\"))\n",
     "    print('')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old code"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output table\n",
+    "# For a given set of faculty, show their cross-availability\n",
+    "def show_cross_availability(names):    \n",
+    "    slots = df_avail.loc[np.logical_or.reduce(df_avail.loc[:,names].values, axis=1), 'slot']\n",
+    "    out = pd.DataFrame({'slot': slots})\n",
+    "    for name in names:        \n",
+    "        slot_status = out.merge(df_avail.loc[:,['slot', name]], how='left', on='slot')[name]        \n",
+    "        slot_status = ['OPEN' if a else '-' for a in slot_status ]\n",
+    "        ind = (df_result.advisor==name) | (df_result.member2==name) | (df_result.member3==name)\n",
+    "        booked_slots = out.merge(df_result.loc[ind,:], how='left', on='slot').student.fillna('').values\n",
+    "        out[name] = [booked_slots[i] if booked_slots[i]!='' else slot_status[i] for i in range(len(slot_status))]\n",
+    "    return out.reset_index()\n",
     "\n",
-    "ind = [min([i for i in range(len(grid)) if grid[i]==b.time]) for b in boards]\n",
-    "ind = [j for (i,j) in sorted(zip(ind,range(len(ind))))]\n",
-    "boards = [boards[i] for i in ind]\n",
-    "\n",
-    "def usTime(time):\n",
-    "    if time>12:\n",
-    "        return (\"%dp\" % (time-12))\n",
-    "    else:\n",
-    "        return (\"%da\" % (time))\n",
-    "\n",
-    "def printboard(b,mode=\"none\"):    \n",
-    "    if mode==\"none\":\n",
-    "        print(\"%22s\\t%12s\\t%s\\t%d\\t\" % (b.student,b.type,dayName[b.time[0]],b.time[1]),end='')\n",
-    "        for fn in b.members:\n",
-    "            print(\"%10s\\t\" % (fn),end='')\n",
-    "        print()\n",
-    "    elif mode==\"tabs\":\n",
-    "        if not hideNames:\n",
-    "            #print(\"%s\\t%s\\t%s\\t%s\\t%s\\t\" % (b.student,b.email,b.type,dayName[b.time[0]],usTime(b.time[1])),end='')\n",
-    "            #print(\"%s\\t%s\\t%s\\t\" % (b.student,dayName[b.time[0]],usTime(b.time[1])),end='')\n",
-    "            print(f\"{b.student:21} {dayName[b.time[0]]}  {usTime(b.time[1]):3}  \",end='')\n",
-    "        else:\n",
-    "            print(\"%s\\t%s\\t%s\\t%s\\t%s\\t\" % (b.student,\"nope@nope.edu\",b.type,dayName[b.time[0]],usTime(b.time[1])),end='')\n",
-    "        for fn in b.members:\n",
-    "            print(f\"{fn:12}\",end='')\n",
-    "        print()\n",
-    "    elif mode==\"html\":\n",
-    "        s = ''\n",
-    "        s += \"<tr><td>%s</td><td>%s</td><td>%s %d</td><td>\" % (b.student,b.type,dayName[b.time[0]],b.time[1])\n",
-    "        for fn in b.members:\n",
-    "            s += \"%s \" % (fn)\n",
-    "        s += \"</td></tr>\"\n",
-    "        display(HTML(s))\n",
-    "\n",
-    "for b in boards:\n",
-    "    printboard(b,mode=\"tabs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Sort by faculty:\n",
-    "\n",
-    "for faculty_name in sorted(faculty_names): # Alphabetize\n",
-    "    for f in faculty:\n",
-    "        if f.name==faculty_name:\n",
-    "            break\n",
-    "    print(f.name)\n",
-    "    for b in boards:\n",
-    "        if f.name in b.members:\n",
-    "            printboard(b,mode=\"tabs\")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate Letters\n",
-    "\n",
-    "if False:\n",
-    "    for b in boards:\n",
-    "        profs = ''\n",
-    "        for i in range(len(b.members)):\n",
-    "            if i == len(b.members)-1:\n",
-    "                if len(b.members)==2:\n",
-    "                    profs += ' and '\n",
-    "                else:\n",
-    "                    profs += ', and '\n",
-    "            elif i>0:\n",
-    "                profs += ', '\n",
-    "            profs += b.members[i]\n",
-    "        print(f\"\"\"Dear {b.student.split(' ')[0]},\n",
-    "\n",
-    "    Your Biology board with professors {profs} is scheduled next week, on {dayName[b.time[0]]} at {usTime(b.time[1]):3}.\n",
-    "\n",
-    "    If this time doesn't work for you please let me know!\n",
-    "\n",
-    "    I picked this time taking into account your profs availability, and your course on BIP.\n",
-    "    All BIO courses except Biosem will be cancelled next week, but I'm assuming that \n",
-    "    other courses could be taking place, so I tried to avoid them). \n",
-    "    At some point your advisor will send you a Zoom link for the meeting.\n",
-    "\n",
-    "    Thanks! And good luck finishing the semester!!\"\"\")    \n",
-    "        print('------------------')"
+    "show_cross_availability(['Mike','Heather','Brooke','Cailey Mitchell'])"
    ]
   }
  ],
