--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "folder_name = '../../data/attendance/'\n",
-    "target_meeting = 'Biosem' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
+    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
     "chat_mask = 'Neuroscience'"
    ]
   },
@@ -311,15 +311,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -541,7 +532,7 @@
    "outputs": [],
    "source": [
     "# Check individual records of needed\n",
-    "token = 'Megi'\n",
+    "token = 'Kira'\n",
     "\n",
     "# Full attendance:\n",
     "all_meetings = df.groupby('date').agg({'name':'count'}).reset_index()\n",
