zoom grader updates

--- a/board_scheduler/zoom_chat_analyzer.ipynb
+++ b/board_scheduler/zoom_chat_analyzer.ipynb
@@ -91,6 +91,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sorted(df.name.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# df.query(\"name=='Arseny Khakhalin'\")"
    ]
   },
