--- a/board_scheduler/zoom_grader_piazza.ipynb
+++ b/board_scheduler/zoom_grader_piazza.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zoom grader\n",
+    "# Zoom grader for normal classes\n",
     "\n",
     "Loads zoom reports from a pre-defined folder, and calculates attendance."
    ]
@@ -29,8 +29,8 @@
    "outputs": [],
    "source": [
     "folder_name = '../../data/attendance/'\n",
-    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
-    "chat_mask = 'Neuroscience'"
+    "target_meeting = 'Comput' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
+    "chat_mask = 'Neuro'"
    ]
   },
   {
@@ -220,6 +220,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df.groupby('name').agg({'check':'sum'}).reset_index().sort_values(by='check')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read and process known alts\n",
     "\n",
     "df_alts = pd.read_csv(folder_name + 'alts.csv', header=0, sep=',')\n",
@@ -267,7 +276,7 @@
    "outputs": [],
    "source": [
     "# Real name searher:\n",
-    "token='stepha'\n",
+    "token='lala'\n",
     "df_fixed.query('name.notna()', engine='python').query('name.str.lower().str.contains(@token)', engine='python')"
    ]
   },
@@ -277,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fixed.fillna(' ').query(\"email.str.contains('6406')\", engine='python')"
+    "# df_fixed.fillna(' ').query(\"email.str.contains('6406')\", engine='python')"
    ]
   },
   {
@@ -305,6 +314,7 @@
     "       .groupby(['name','email'])\n",
     "       .agg({'check': sum})\n",
     "       .reset_index()\n",
+    "       .sort_values(by='check')\n",
     "      )\n",
     "\n",
     "# dfs"
@@ -363,6 +373,7 @@
     "    print(fname, ':', title)\n",
     "    \n",
     "    messages = s.split(splitter)[1:]  # Skip the homework itself (number 0)\n",
+    "    bag = set()\n",
     "    for message in messages:\n",
     "        first = max(0, message.find('days ago')+9)\n",
     "        last  = message.find('\\nhelpful! ')        \n",
@@ -375,9 +386,11 @@
     "            if emoji in message:\n",
     "                grade = 'bad'\n",
     "        for name in people_piazza.name:        \n",
-    "            if name in message:\n",
-    "                df_piazza = df_piazza.append({'name': name, 'work':title, 'grade':grade,\n",
-    "                                              'message':message[first:last]}, ignore_index=True)"
+    "            if name in message:                \n",
+    "                if name not in bag:\n",
+    "                    df_piazza = df_piazza.append({'name': name, 'work':title, 'grade':grade,\n",
+    "                                                  'message':message[first:last]}, ignore_index=True)\n",
+    "                    bag |= {name}"
    ]
   },
   {
@@ -473,13 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How many missed assignments are problematic?\n",
-    "# For Neuro this semester we seem to have 34 classes and 21 homework\n",
-    "\n",
-    "print('Can miss classes, and still pass:', 0.2*34)\n",
-    "print('Can miss classes, and still get a B:', 0.1*34)\n",
-    "print('Can miss homeworks, and still pass:', 0.2*21)\n",
-    "print('Can miss homeworks, and still get a B:', 0.1*21)"
+    "df_full"
    ]
   },
   {
@@ -489,8 +496,11 @@
    "outputs": [],
    "source": [
     "# Constants\n",
-    "classes_so_far = 23\n",
-    "works_so_far = 13"
+    "classes_so_far = 33\n",
+    "works_so_far = 19\n",
+    "\n",
+    "print(f\"Missed classes that lowers grade to a C: {np.round(classes_so_far*0.1)}\")\n",
+    "print(f\"Missed classes that fails a person: {np.round(classes_so_far*0.2)}\")"
    ]
   },
   {
@@ -503,14 +513,14 @@
     "#                 0    1     2    3     4     5    6\n",
     "grade_letters = ['F', 'C', 'B-', 'B', 'B+', 'A-', 'A']\n",
     "\n",
-    "df_full['grade'] = 3\n",
-    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.9)), 1)\n",
-    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.8)), 0)\n",
+    "df_full['grade'] = 3 # Default of B\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.9)), 1) # C criterian\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.8)), 0) # Fail criterion\n",
     "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.9)), 1)\n",
     "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.8)), 0)\n",
     "df_full.loc[(df_full.good >= 3) & (df_full.grade >= 1), 'grade'] += 1\n",
     "df_full.loc[(df_full.good >= 6) & (df_full.grade >= 1), 'grade'] += 1\n",
-    "df_full.loc[(df_full.percentile_chats <= 20) & (df_full.grade >= 1), 'grade'] += 1\n",
+    "df_full.loc[(df_full.percentile_chats <= 20) & (df_full.grade >= 1), 'grade'] += 1 # Only if not-failing, participation\n",
     "df_full.grade = np.minimum(5, df_full.grade)\n",
     "# Translate to letters:\n",
     "df_full.grade = [grade_letters[i] for i in df_full.grade]\n",
