--- a/ml_experiments/arima.ipynb
+++ b/ml_experiments/arima.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's start"
+    "# Let's start with a naive non-stationary autoregression"
    ]
   },
   {
